--- a/html/d-day.html
+++ b/html/d-day.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <title>D-Day</title>
     <link rel="stylesheet" href="../css/d-day.css" />
-    <script src="../js/d-day.js" defer></script>
+    <script src="../js/d-day practice.js" defer></script>
     <!-- js에 defer 속성을 부여하면, 맨위에서 식별자를 잡을 수 없어 오류가 나던 기능이 실행이 된다. 왜? -->
   </head>
   <body>
@@ -33,6 +33,8 @@
       <input type="text" id="target-month-input" class="target-input" size="7" placeholder="월 Month" /> -
       <input type="text" id="target-date-input" class="target-input" size="7" placeholder="일 Date" />
     </div>
-    <button id="start-btn" onclick="starter()">카운트다운 시작</button>
+    <button class="btn" onclick="starter()">카운트다운 시작</button>
+    <button class="btn" onclick="resetTimer()">타이머 초기화</button>
+    <h3>나에게 부족한 부분, 여러 가지가 있지만 우선 for-of, for-in에 익숙해질 필요가 있다.</h3>
   </body>
 </html>
