--- a/to-do-list/html/index.html
+++ b/to-do-list/html/index.html
@@ -16,5 +16,8 @@
         <li><span>저녁 먹기</span></li>
       </ul>
     </div>
+    <div class="delete-btn-wrapper">
+      <button onclick="deleteAll()">전체 삭제</button>
+    </div>
   </body>
 </html>
